# qgroundcontrol_modification

./: README.md
qgroundcontrol/: CMakeLists.txt  QGCCommon.pri  qgc.code-workspace  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
qgroundcontrol/MyControls/: MyAltimeter.qml  MyBattery.qml  MyButton.qml  MyCompass.qml  MyVelocimeter.qml  qmldir
qgroundcontrol/MyWindows/: MyAddView.qml  MyInstrumentWidget.qml  demo.qml  qmldir
qgroundcontrol/libs/mavlink/include/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  version.h
qgroundcontrol/libs/mavlink/include/mavlink/v2.0/common/: common.h  mavlink_msg_gps_input.h  mavlink_msg_highres_imu.h  mavlink_msg_hil_gps.h  mavlink_msg_isbd_link_status.h  mavlink_msg_obstacle_distance.h  mavlink_msg_odometry.h  mavlink_msg_onboard_computer_status.h  mavlink_msg_open_drone_id_location.h  mavlink_msg_open_drone_id_system.h  mavlink_msg_optical_flow.h  mavlink_msg_raw_imu.h  mavlink_msg_trajectory_representation_waypoints.h  mavlink_msg_vehicle_safety_status.h  testsuite.h  version.h
qgroundcontrol/libs/mavlink/include/mavlink/v2.0/icarous/: version.h
qgroundcontrol/libs/mavlink/include/mavlink/v2.0/message_definitions/: common.xml
qgroundcontrol/libs/mavlink/include/mavlink/v2.0/uAvionix/: uAvionix.h  version.h
qgroundcontrol/localization/: qgc_zh_CN.ts
qgroundcontrol/src/: QGC.cc  QGC.h  QGCApplication.cc  QGCApplication.h  QGCLoggingCategory.h  QGCPalette.cc  QGCToolbox.cc  QGCToolbox.h  RunGuard.cc  RunGuard.h  main.cc
qgroundcontrol/src/Airmap/: AirmapSettings.qml  FlightFeature.qml
qgroundcontrol/src/AnalyzeView/: AnalyzeView.qml  LogDownloadPage.qml  MavlinkConsolePage.qml
qgroundcontrol/src/AutoPilotPlugins/APM/: APMAutoPilotPlugin.cc  APMPowerComponent.qml  APMRadioComponentSummary.qml
qgroundcontrol/src/AutoPilotPlugins/Common/: ESP8266Component.h  ESP8266Component.qml  MotorComponent.h  MotorComponent.qml  RadioComponent.qml  RadioComponentController.cc  SetupPage.qml  SyslinkComponent.h  SyslinkComponent.qml
qgroundcontrol/src/AutoPilotPlugins/PX4/: AirframeComponent.cc  AirframeComponent.h  AirframeComponent.qml  AirframeComponentSummary.qml  CameraComponent.h  CameraComponent.qml  CameraComponentSummary.qml  FlightModesComponent.cc  FlightModesComponent.h  FlightModesComponentSummary.qml  PX4AdvancedFlightModes.qml  PX4AutoPilotPlugin.cc  PX4FlightModes.qml  PX4RadioComponent.h  PX4RadioComponentSummary.qml  PX4SimpleFlightModes.qml  PX4TuningComponent.h  PX4TuningComponentCopter.qml  PX4TuningComponentPlane.qml  PX4TuningComponentVTOL.qml  PowerComponent.h  PowerComponent.qml  PowerComponentSummary.qml  SafetyComponent.h  SafetyComponent.qml  SafetyComponentSummary.qml  SensorsComponent.h  SensorsComponent.qml  SensorsComponentSummary.qml  SensorsComponentSummaryFixedWing.qml  SensorsSetup.qml
qgroundcontrol/src/FactSystem/FactControls/: FactComboBox.qml  FactTextField.qml
qgroundcontrol/src/FirmwarePlugin/: FirmwarePlugin.cc
qgroundcontrol/src/FlightDisplay/: FlightDisplayView.qml  FlightDisplayViewMap.qml  FlightDisplayViewWidgets.qml
qgroundcontrol/src/FlightMap/: FlightMap.qml
qgroundcontrol/src/FlightMap/Widgets/: MapFitFunctions.qml
qgroundcontrol/src/PlanView/: PlanToolBar.qml  PlanToolBarIndicators.qml  PlanView.qml  Zcq_PlanToolBarIndicators.qml
qgroundcontrol/src/QmlControls/: AppMessages.cc  AppMessages.h  AppMessages.qml  FactSliderPanel.qml  IndicatorButton.qml  LogReplayStatusBar.qml  MainWindowSavedState.qml  PIDTuning.qml  ParameterEditor.qml  ParameterEditorController.cc  QGCButton.qml  QGCCheckBox.qml  QGCColoredImage.qml  QGCComboBox.qml  QGCFlickable.qml  QGCFlickableHorizontalIndicator.qml  QGCFlickableVerticalIndicator.qml  QGCLabel.qml  QGCListView.qml  QGCMenuItem.qml  QGCMenuSeparator.qml  QGCMouseArea.qml  QGCRadioButton.qml  QGCSlider.qml  QGCTextField.qml  QGCToolBarButton.qml  QGCViewDialogContainer.qml  QmlTest.qml  RCChannelMonitor.qml  ScreenTools.qml  SectionHeader.qml  SubMenuButton.qml  ToolStrip.qml  VehicleRotationCal.qml  Zcq_debug.qml
qgroundcontrol/src/QmlControls/QGroundControl/ScreenTools/: qmldir
qgroundcontrol/src/QmlControls/QGroundControl/Zcq_debug/: qmldir
qgroundcontrol/src/QtLocationPlugin/: QGCMapEngine.cpp  QGCMapEngine.h  QGCTileCacheWorker.h  QGeoTiledMappingManagerEngineQGC.cpp
qgroundcontrol/src/QtLocationPlugin/QMLControl/: OfflineMap.qml
qgroundcontrol/src/Settings/: AppSettings.cc  AppSettings.h  SettingsGroup.h
qgroundcontrol/src/Vehicle/: Vehicle.cc  Vehicle.h
qgroundcontrol/src/VehicleSetup/: FirmwareUpgrade.qml  JoystickConfig.qml  PX4FlowSensor.qml  SetupParameterEditor.qml  SetupView.qml  VehicleSummary.qml
qgroundcontrol/src/api/: QGCCorePlugin.cc  QGCOptions.cc
qgroundcontrol/src/comm/: MockLink.cc  MockLink.h  QGCSerialPortInfo.h
qgroundcontrol/src/ui/: AppSettings.qml  MainRootWindow.qml
qgroundcontrol/src/ui/preferences/: GeneralSettings.qml  HelpSettings.qml  LinkSettings.qml  MavlinkSettings.qml
qgroundcontrol/src/ui/toolbar/: ArmedIndicator.qml  BatteryIndicator.qml  GPSIndicator.qml  GPSRTKIndicator.qml  JoystickIndicator.qml  LinkIndicator.qml  MainToolBar.qml  MainToolBarIndicators.qml  MessageIndicator.qml  ModeIndicator.qml  MultiVehicleSelector.qml  RCRSSIIndicator.qml  ROIIndicator.qml  SignalStrength.qml  TelemetryRSSIIndicator.qml  VTOLModeIndicator.qml
qgroundcontrol/zcq/: zcq.h  zcq.qml
